fix left gap iphone 8 design

--- a/css/petite_resolution.css
+++ b/css/petite_resolution.css
@@ -28,7 +28,7 @@ li:nth-child(1)
     left: 0;
     border-bottom: 3px solid #F2F2F2;
     padding-bottom: 10px;
-    width: 187.5px;
+    width: 185px;
     text-align: center;
 }
 
@@ -36,10 +36,10 @@ li:nth-child(2)
 {
     position: absolute;
     top: 100px;
-    left: 195px;
+    left: 180px;
     border-bottom: 3px solid #F2F2F2;
     padding-bottom: 10px;
-    width: 187.5px;
+    width: 185px;
     text-align: center;
 }
 
