--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,8 @@ body
 {
     font-family: "Raleway-Regular", sans-serif;
     font-size: 0.9em;
-    width: 100%;
-    max-width: 1435px;
+    /* width: 100%;
+    max-width: 1435px; */
 }
 
 #bloc-page
@@ -419,7 +419,7 @@ button
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    height: 125px;
+    height: 115px;
     padding: 10px;
 }
 
